--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "recharts": "^2.15.3",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://github.com/mewnite/training-app",
+  "homepage": "https://mewnite.github.io/training-app",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -44,6 +44,6 @@
     "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.6"
+    "tailwindcss": "^3.4.17"
   }
 }
